--- a/src/app/client/home/home.component.html
+++ b/src/app/client/home/home.component.html
@@ -38,7 +38,12 @@
 
                     </div>
                     <div class="course__register">
-                        <button class="btn btn-success" (click)="registerCourse(course.maKhoaHoc)">Đăng ký</button>
+                        <button *ngIf="daDangKy(course.maKhoaHoc, myCourses)" class="btn btn-warning" disabled>
+                            Đã đăng ký</button>
+                        <button *ngIf="!daDangKy(course.maKhoaHoc, myCourses)" class="btn btn-success"
+                            (click)="registerCourse(course.maKhoaHoc)">
+                            Đăng ký</button>
+
                     </div>
                 </div>
             </ng-container>
