--- a/src/app/client/footer/footer.component.html
+++ b/src/app/client/footer/footer.component.html
@@ -32,13 +32,6 @@
             </form>
         </div>
         <div class="footer__right col-12 col-md-4">
-            <!-- <div class="iframe">
-                <iframe class="iframe__fb"
-                    src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fvoaeasy%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                    width="500" height="340" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                    allowfullscreen="true"
-                    allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-            </div> -->
             <iframe
                 src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fvoaeasy%2F&tabs=timeline&width=500&height=600&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
                 width="500" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
@@ -88,15 +81,15 @@
             </ul>
         </div>
         <div class="footer__bottom--mid col-12 col-md-4">
-            <p>
-                <a href="#">Đây là link ví dụ</a>
-                <a href="#">Đây là link ví dụ</a>
-                <a href="#">Đây là link ví dụ</a>
-                <a href="#">Đây là link ví dụ</a>
-                <a href="#">Đây là link ví dụ</a>
-                <a href="#">Đây là link ví dụ</a>
-                <a href="#">Đây là link ví dụ</a>
-                <a href="#">Đây là link ví dụ</a>
+            <p class="tags">
+                <a routerLink='danh-muc-khoa-hoc/BackEnd'>Lập trình backend</a>
+                <a routerLink='danh-muc-khoa-hoc/FrontEnd'>Lập trình FrontEnd</a>
+                <a href="#">Thiết kế đồ họa</a>
+                <a routerLink='danh-muc-khoa-hoc/Design'>Lập trình Web</a>
+                <a routerLink='danh-muc-khoa-hoc/DiDong'>Lập trình di động</a>
+                <a routerLink='danh-muc-khoa-hoc/TuDuy'>Tư duy lập trình</a>
+                <a routerLink='danh-muc-khoa-hoc/FullStack'>Lập trình FullStack</a>
+                <a href="#">Xem tử vi</a>
             </p>
         </div>
         <div class="footer__bottom--left col-12 col-md-4"></div>
@@ -111,7 +104,7 @@
                 <i class="fab fa-twitter"></i>
             </span>
             <span>
-                <i class="fab fa-facebook"></i>
+                <i class="fab fa-facebook-square"></i>
             </span>
         </div>
     </div>
