--- a/src/assets/sass/Layouts/_courseDetail.scss
+++ b/src/assets/sass/Layouts/_courseDetail.scss
@@ -1,30 +1,25 @@
 .Detail {
     .courseDetail {
         width: 70vw;
-        margin: 2rem auto;
+        margin: $mg-3 auto;
         height: 75vh;
 
         .courseDetail_header {
             height: 45%;
-            background-color: seagreen;
             position: relative;
             display: flex;
             justify-content: space-between;
             background-image: url(../../../assets/img/pexels-josh-sorenson-small.jpg);
             .courseDetail_header--img {
-                background-color: hotpink;
                 position: absolute;
                 bottom: 15%;
                 right: 10%;
                 max-width: 25rem;
                 height: 20rem;
                 border-radius: 1rem;
-
                 img {
                     width: 100%;
                     height: 100%;
-
-                    // clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
                 }
             }
             .courseDetail_header--content {
@@ -33,33 +28,33 @@
                 left: 10%;
                 width: 40rem;
                 height: 15rem;
-                padding-left: 1rem;
-                color: white;
+                padding-left: $pd-1;
+                color: $color-white-0;
                 .courseDetail_header--title {
-                    font-size: 3rem;
-                    font-weight: 600;
-                    color: white;
+                    font-size: $fs-4;
+                    font-weight: $fw-bold-1;
+                    color: $color-white-0;
                     text-transform: uppercase;
                 }
                 .courseDetail_header--rating {
-                    font-size: 1.4rem;
+                    font-size: $fs-1;
                 }
                 .courseDetail_header--btn {
                     cursor: pointer;
                     background: none;
                     width: 80px;
                     height: 40px;
-                    font-size: 1.4rem;
-                    border: 1px solid #28769c;
+                    font-size: $fs-1;
+                    border: 1px solid $color-blue-2;
                     background-color: white;
-                    color: #3489bd;
+                    color: $color-blue-3;
                     border-radius: 5px;
-                    font-weight: 500;
+                    font-weight: $fw-bold-0;
                     transition: 0.5s;
                     &:hover {
-                        border: 2px solid #925a07;
+                        border: 2px solid $color-yellow-1;
                         transform: scale(1.2);
-                        color: black;
+                        color: $color-black-0;
                     }
                 }
             }
@@ -67,12 +62,12 @@
 
         .courseDetail_desc {
             height: 55%;
-            background-color: seashell;
-            padding: 1.5rem 1rem;
+            background-color: $color-gray-1;
+            padding: $pd-2 $pd-1;
             .courseDetail_desc--title {
-                color: black;
-                font-size: 4rem;
-                font-weight: 500;
+                color: $color-black-1;
+                font-size: $fs-5;
+                font-weight: $fw-bold-0;
             }
             .courseDetail_desc--content {
                 font-size: calc(1rem + 0.4vw);
@@ -84,9 +79,9 @@
         button#courseDetail__close {
             width: 50px;
             height: 30px;
-            background-color: red;
+            background-color: $color-red-0;
             i {
-                font-size: 20px;
+                font-size: $fs-2;
             }
             &:hover {
                 transform: scale(1.1);
@@ -97,7 +92,7 @@
 
 @include responsive("large") {
     .mat-dialog-container {
-        padding: 10px 5px !important;
+        padding: $pd-1 $pd-0 !important;
         .Detail {
             .courseDetail {
                 padding: 0;
@@ -115,15 +110,15 @@
                             background: none;
                             width: 60px;
                             height: 28px;
-                            font-size: 1.2rem;
-                            background-color: white;
+                            font-size: ($fs-1 - 2);
+                            background-color: $color-white-0;
                             border-radius: 5px;
                             font-weight: normal;
                             transition: 0.5s;
                             &:hover {
                                 border: 1px solid #925a07;
                                 transform: scale(1.1);
-                                color: black;
+                                color: $color-black-1;
                             }
                         }
                     }
