--- a/src/assets/sass/Layouts/_danh-muc-khoa-hoc.scss
+++ b/src/assets/sass/Layouts/_danh-muc-khoa-hoc.scss
@@ -1,8 +1,8 @@
 .container {
     .coursesList {
-        background-color: white;
+        background-color: $color-white-0;
         width: 100%;
-        margin: 1.5rem auto;
+        margin: $mg-2 auto;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -10,15 +10,15 @@
         .coursesItem {
             width: 200px;
             min-height: 25rem;
-            margin: 15px;
+            margin: $mg-2;
             background-color: rgba(0, 0, 0, 0.39);
-            border: 2px solid rgb(161, 101, 101);
+            border: 2px solid $color-purple-0;
             border-radius: 5px;
             cursor: pointer;
             .img__container {
                 width: 100%;
                 height: 15rem;
-                background-color: salmon;
+                background-color: $color-purple-1;
 
                 img {
                     width: 100%;
@@ -26,27 +26,27 @@
                 }
             }
             h3.course__title {
-                color: white;
-                font-weight: 500;
-                padding-left: 1rem;
+                color: $color-white-0;
+                font-weight: $fw-bold-0;
+                padding-left: $pd-1;
             }
             .course__author,
             .course__views {
                 font-size: calc(1rem + 0.4vw);
-                color: white;
-                padding-left: 1rem;
+                color: $color-white-0;
+                padding-left: $pd-1;
                 .course__views--rating {
-                    color: yellow;
+                    color: $color-yellow-2;
                 }
                 .course__views--number {
-                    font-size: 1.4rem;
-                    color: rgb(224, 218, 218);
+                    font-size: $fs-1;
+                    color: $color-gray-3;
                 }
             }
             .course__register {
                 display: flex;
                 justify-content: flex-end;
-                padding-right: 1.3rem;
+                padding-right: ($pd-2 - 2);
             }
         }
     }
