--- a/src/assets/sass/Layouts/_logIn.scss
+++ b/src/assets/sass/Layouts/_logIn.scss
@@ -3,19 +3,19 @@
     width: 60%;
     margin: 10rem auto;
     padding: 3rem 5rem;
-    background-color: #60b4df;
+    background-color: $color-blue-0;
     .login_title {
         display: flex;
         justify-content: center;
-        font-size: 3rem;
-        font-weight: 600;
+        font-size: $fs-4;
+        font-weight: $fw-bold-1;
     }
     .login_form {
         font-size: calc(1rem + 0.4vw);
         .login_form--input {
             input {
-                padding: 1rem 1.5rem;
-                font-size: 1.8rem;
+                padding: $pd-1 $pd-2;
+                font-size: ($fs-0 + 2);
             }
         }
         .login__form--button {
@@ -23,7 +23,7 @@
             justify-content: center;
             button {
                 display: inline-block;
-                padding: 1rem 2rem;
+                padding: $pd-1 $pd-3;
                 font-size: calc(1rem + 0.2vw);
                 border: 0.2rem solid white;
                 border-radius: 4rem;
@@ -38,8 +38,8 @@
                 font-size: calc(1rem + 0.2vw);
                 min-width: 6rem;
                 &:hover {
-                    background-color: white;
-                    color: #69bde7;
+                    background-color: $color-white-0;
+                    color: $color-blue-1;
                 }
             }
         }
@@ -50,15 +50,15 @@
     #login {
         width: 80%;
         margin: 10rem auto;
-        padding: 1rem 3rem;
-        background-color: #60b4df;
+        padding: $pd-1 ($pd-4 + 5);
+        background-color: $color-blue-0;
         .login_title {
             font-size: calc(2rem + 1vw);
         }
         .login_form {
             .login_form--input {
                 input {
-                    padding: 1rem 1.5rem;
+                    padding: $pd-1 $pd-2;
                     font-size: calc(1rem + 0.64vw);
                 }
             }
