--- a/src/app/admin/ghi-danh/ghi-danh.component.html
+++ b/src/app/admin/ghi-danh/ghi-danh.component.html
@@ -39,10 +39,13 @@
                 <ng-container matColumnDef="thaoTac">
                     <th mat-header-cell *matHeaderCellDef>Thao tác</th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="Primary" (click)="register(this.element.maKhoaHoc)">Xác
-                            thực</button>
-                        <button mat-raised-button color="warn"
-                            (click)="unRegister(this.element.maKhoaHoc)">Hủy</button>
+                        <button class="actions__btn mr-2 p-3 btn btn-success"
+                            (click)="register(this.element.maKhoaHoc)"><i class="fa fa-user-edit"></i><span
+                                class="actions__mes3">Xác
+                                thực</span></button>
+                        <button class="actions__btn mr-2 p-3 btn btn-danger"
+                            (click)="unRegister(this.element.maKhoaHoc)"><i class="fa fa-trash-alt"></i><span
+                                class="actions__mes4">Hủy</span></button>
                     </td>
                 </ng-container>
 
@@ -76,8 +79,11 @@
                 <ng-container matColumnDef="thaoTac">
                     <th mat-header-cell *matHeaderCellDef>Thao tác</th>
                     <td mat-cell *matCellDef="let element">
-                        <button mat-raised-button color="warn"
-                            (click)="unRegister(this.element.maKhoaHoc)">Hủy</button>
+                        <!-- <button mat-raised-button color="warn"
+                            (click)="unRegister(this.element.maKhoaHoc)">Hủy</button> -->
+                        <button class="actions__btn mr-2 p-3 btn btn-danger"
+                            (click)="unRegister(this.element.maKhoaHoc)"><i class="fa fa-trash-alt"></i><span
+                                class="actions__mes4">Hủy</span></button>
                     </td>
                 </ng-container>
 
