--- a/src/app/admin/header/header.component.html
+++ b/src/app/admin/header/header.component.html
@@ -13,7 +13,7 @@
             <span><i class="fa fa-user-tie"></i></span>
         </button>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item>
+            <button mat-menu-item (click)="getUserInfo(loggedUser)">
                 <span><i class="fa fa-user-cog mr-3"></i></span>
                 <span>Cập nhật thông tin</span>
             </button>
