--- a/src/assets/sass/Layouts/_adminGhiDanhByUser.scss
+++ b/src/assets/sass/Layouts/_adminGhiDanhByUser.scss
@@ -1,8 +1,8 @@
 #ghiDanhByUser {
-    width: 65vw;
+    width: 80vw;
     .khoaHocChuaGhiDanh {
         mat-form-field {
-            width: 88%;
+            width: 90%;
         }
         button {
             margin-left: 2.5rem;
@@ -12,6 +12,184 @@
     .khoaHocDaGhiDanh {
         .mat-table {
             width: 88%;
+            .mat-column-thaoTac {
+                padding: 0 !important;
+                position: relative;
+                .actions__mes3,
+                .actions__mes4 {
+                    position: absolute;
+                    top: -50px;
+                    left: -5px;
+                    color: white;
+                    font-weight: 500;
+                    background-color: #3cd9e4d8;
+                    width: 60px;
+                    height: 40px;
+                    line-height: 40px;
+                    box-shadow: 0 0 10px 5px #1029b8;
+                    border-radius: 3px;
+                    display: none;
+                    &::after {
+                        content: " ";
+                        width: 20px;
+                        height: 20px;
+                        background-color: #3cd9e4d8;
+                        border-top: 0px solid #f5eded;
+                        border-right: 1px solid #ffffff;
+                        border-bottom: 1px solid #ffffff;
+                        border-left: 0px solid #ffffff;
+                        position: absolute;
+                        top: 100%;
+                        left: 25%;
+                        margin-top: -10px;
+                        transform: rotate(45deg);
+                    }
+                }
+
+                .actions__mes3 {
+                    left: -10px;
+                    background-color: #5cac6d;
+
+                    &::after {
+                        background-color: #5cac6d;
+                    }
+                }
+                .actions__mes4 {
+                    left: 30px;
+                    background-color: rgb(245, 148, 124);
+                    &::after {
+                        background-color: rgb(245, 148, 124);
+                    }
+                }
+                button {
+                    &:hover {
+                        .actions__mes3,
+                        .actions__mes4 {
+                            display: block;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .khoaHocDaGhiDanh {
+        .mat-table {
+            .mat-column-thaoTac {
+                padding: 0 !important;
+                .actions__mes4 {
+                    left: -10px;
+                    background-color: rgb(245, 148, 124);
+                    &::after {
+                        background-color: rgb(245, 148, 124);
+                    }
+                }
+            }
+        }
+    }
+}
+
+@include responsive("medium") {
+    #ghiDanhByUser {
+        .khoaHocChuaGhiDanh {
+            button {
+                margin-left: 0.5rem;
+            }
+        }
+        .khoaHocChoXacThuc,
+        .khoaHocDaGhiDanh {
+            .mat-table {
+                width: 88%;
+                button {
+                    padding: 0 !important;
+                    .mat-column-thaoTac {
+                        .actions__mes3,
+                        .actions__mes4 {
+                            position: absolute;
+                            top: -50px;
+                            left: -5px;
+                            color: white;
+                            font-weight: 500;
+                            background-color: #3cd9e4d8;
+                            width: 60px;
+                            height: 40px;
+                            line-height: 40px;
+                            box-shadow: 0 0 10px 5px #1029b8;
+                            border-radius: 3px;
+                            display: none;
+                            &::after {
+                                content: " ";
+                                width: 20px;
+                                height: 20px;
+                                background-color: #3cd9e4d8;
+                                border-top: 0px solid #f5eded;
+                                border-right: 1px solid #ffffff;
+                                border-bottom: 1px solid #ffffff;
+                                border-left: 0px solid #ffffff;
+                                position: absolute;
+                                top: 100%;
+                                left: 25%;
+                                margin-top: -10px;
+                                transform: rotate(45deg);
+                            }
+                        }
+                        .actions__mes2 {
+                            // background-color: #7cc2fa;
+                            left: 30px;
+                            background-color: #36bbf8;
+
+                            &::after {
+                                background-color: #36bbf8;
+                            }
+                        }
+                        .actions__mes3 {
+                            left: 70px;
+                            background-color: #5cac6d;
+
+                            &::after {
+                                background-color: #5cac6d;
+                            }
+                        }
+                        .actions__mes4 {
+                            left: 100px;
+                            background-color: rgb(245, 148, 124);
+                            &::after {
+                                background-color: rgb(245, 148, 124);
+                            }
+                        }
+                    }
+                    &:hover {
+                        .actions__mes1,
+                        .actions__mes2,
+                        .actions__mes3,
+                        .actions__mes4 {
+                            display: block;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@include responsive("small") {
+    #ghiDanhByUser {
+        .khoaHocChoXacThuc,
+        .khoaHocDaGhiDanh {
+            .mat-table {
+                width: 88%;
+                .mat-column-thaoTac {
+                    padding: 0 !important;
+                    button {
+                        padding: 0 !important;
+                        .actions__mes3 {
+                            left: -20px;
+                        }
+                        .actions__mes4 {
+                            left: 0px;
+                        }
+                    }
+                }
+            }
         }
     }
 }
