--- a/src/assets/sass/Layouts/_adminUsers.scss
+++ b/src/assets/sass/Layouts/_adminUsers.scss
@@ -51,7 +51,7 @@
             position: absolute;
             display: flex;
             // top: 10.5%;
-            left: 10%;
+            left: 70px;
             background: #2f3640;
             height: 40px;
             border-radius: 40px;
